[Code]: update and clean up few classes